--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^3.1.1
+  firebase_core: ^3.2.0
   firebase_auth: ^5.1.1
   google_fonts: ^6.2.1
   cloud_firestore: ^5.0.2
@@ -43,6 +43,13 @@ dependencies:
   riverpod_annotation: ^2.3.5
   intl: ^0.19.0
   file_picker: ^8.0.6
+  open_file: ^3.3.2
+  flutter_image_compress: ^2.3.0
+  riverpod: ^2.5.1
+  firebase_storage: ^12.1.1
+  path_provider: ^2.1.3
+  share_plus: ^9.0.0
+  syncfusion_flutter_gauges: ^26.1.42
 
 dev_dependencies:
   flutter_test:
@@ -53,11 +60,11 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
-  riverpod_generator: ^2.4.0
+  flutter_lints: ^4.0.0
+  riverpod_generator: 
   build_runner: ^2.4.11
   custom_lint: ^0.6.4
-  riverpod_lint: ^2.3.10
+  riverpod_lint: 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
