--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "dart.flutterHotReloadOnSave": "manual",
-    "dart.hotReloadOnSave": "manual"
+    "dart.hotReloadOnSave": "manual",
+    "IDX.aI.enableInlineCompletion": false,
+    "IDX.aI.enableCodebaseIndexing": false
 }
