--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.3
   share_plus: ^9.0.0
   syncfusion_flutter_gauges: ^26.1.42
+  flutter_file_downloader: ^2.0.0
 
 dev_dependencies:
   flutter_test:
