--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
   riverpod_annotation: ^2.3.5
   intl: ^0.19.0
   file_picker: ^8.0.6
-  open_file: ^3.3.2
   flutter_image_compress: ^2.3.0
   riverpod: ^2.5.1
   firebase_storage: ^12.1.1
@@ -51,6 +50,7 @@ dependencies:
   share_plus: ^9.0.0
   syncfusion_flutter_gauges: ^26.1.42
   flutter_file_downloader: ^2.0.0
+  open_file_plus: ^3.4.1+1
 
 dev_dependencies:
   flutter_test:
