--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,10 +63,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-  riverpod_generator: 
+  riverpod_generator: ^2.4.0 
   build_runner: ^2.4.11
   custom_lint: ^0.6.4
-  riverpod_lint: 
+  riverpod_lint: ^2.3.10 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
