--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_file_downloader: ^2.0.0
   open_file_plus: ^3.4.1+1
   animated_stack: ^0.2.0
+  cunning_document_scanner: ^1.2.3
 
 dev_dependencies:
   flutter_test:
